# ai-engineering-interview-vault

./: .gitignore  README.md  SESSION_BRIEF.md  pyproject.toml
concepts/agents/: README.md
concepts/ai-system-design/: README.md
concepts/evals/: README.md
concepts/inference/: README.md  provider-boundaries.md
concepts/observability/: README.md
concepts/platform/: README.md  supabase-in-student-ai-applications.md
concepts/privacy-security/: README.md
concepts/rag/: README.md  retrieval-application-layer.md  tokenization.md
concepts/structured-outputs/: README.md
interview-bank/behavioral/: README.md
interview-bank/project-explanations/: README.md
interview-bank/system-design/: README.md
interview-bank/technical/: README.md  provider-boundaries.md
mistake-patterns/: README.md
offer-translation/: README.md  agent-harness-hardening-sprint.md  ai-system-evaluation-audit.md  rag-reliability-sprint.md
prompts/: master-learning-session-prompt.md
review-schedules/: README.md  spaced-repetition-index.md
snippets/agents/: README.md
snippets/evals/: README.md
snippets/inference/: README.md
snippets/pydantic/: README.md
snippets/rag/: README.md
templates/: concept-file-template.md  runnable-snippet-template.py  session-file-template.md
weeks/week-01-foundations/: 2026-06-13-provider-boundaries-and-error-envelopes-session.md  2026-06-13-week-01-remaining-study-session-brief.md  2026-06-16-llm-product-stack-map-deepening-session.md  2026-06-22-tokenization-through-rag-failure-analysis-session.md  README.md  (+3 more)
(+4 files in other folders)
